--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,13 +10,13 @@ services:
     environment:
       - GEOCODE_API_KEY=${GEOCODE_API_KEY}
     restart: unless-stopped
-    expose:
-      - 3000
+    ports:
+      - "3000:3000"
     depends_on:
       - mongo-db
 
   mongo-db:
-    image: mongo:4.0
+    image: mongo
     container_name: dengue-db
     ports:
       - "27017:27017"
